<resources>

    <string name="app_name">TabLayout</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="slash_fragment">Slash Fragment</string>
    <string name="community_fragment">Community Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="email_fragment">Email Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="img_title1">User Name 1</string>
    <string name="img_title2">User Name 2</string>
    <string name="img_title3">User Name 3</string>
    <string name="img_title4">User Name 4</string>
    <string name="img_title5">User Name 5</string>
    <string name="img_sub_title1">Sub-Title 1</string>
    <string name="img_sub_title2">Sub-Title 2</string>
    <string name="img_sub_title3">Sub-Title 3</string>
    <string name="img_sub_title4">Sub-Title 4</string>
    <string name="img_sub_title5">Sub-Title 5</string>


    <string name="app_name_user">Twitter</string>

    <string name="app_Profile">Profile</string>
    <string name="app_Premium">Premium</string>
    <string name="app_Bookmarks">Bookmarks</string>
    <string name="app_Jobs">Jobs</string>
    <string name="app_Lists">Lists</string>
    <string name="app_Spaces">Spaces</string>
    <string name="app_Monetization">Monetization</string>
    <string name="app_SettingsandSupport">Settings and Support</string>
    <string name="app_SettingsandPrivacy">Settings and Privacy</string>
    <string name="app_HelpCenter">Help Center</string>
    <string name="app_Purchases">Purchases</string>

    <string name="app_OpenDrawer">Open drawer</string>
    <string name="app_CloseDrawer">Close drawer</string>


    <string name="app_The_Design_Sphere">The Design Sphere</string>
    <string name="app_2M_Members">2M Members</string>
    <string name="app_Design">Design</string>


    <string name="app_Feedback">Feedback</string>
    <string name="app_1M_Members">1M Members</string>
    <string name="app_Official">Official</string>


    <string name="app_Apple">Apple</string>
    <string name="app_10M_Members">10M Members</string>
    <string name="app_Technology">Technology</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>

    <string name="direct_mess">Find direct messages</string>
    <string name="profile">User Profile</string>
    <string name="find_message">Find Direct Message</string>
    <string name="setting">Setting</string>
    <string name="message">Message</string>
    <string name="add_mail">Add message or group</string>
    <string name="back">Back</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="messages_setting">Messages setting</string>
    <string name="profile_info">Profile</string>
    <string name="premium">Premium</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="lists">Lists</string>
    <string name="spaces">Spaces</string>
    <string name="monetization">Monetization</string>
    <string name="username">Username</string>
    <string name="following">X Following</string>
    <string name="followers">Y Followers</string>
    <string name="setting_and_support"><![CDATA[Settings & Support]]></string>
    <string name="settings_privacy">Settings and Privacy</string>
    <string name="help_center">Help Center</string>

    <string name="All">All</string>
    <string name="Verified">Verified</string>
    <string name="Mentions">Mentions</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="email_setting">Email Setting</string>
    <string name="create_group">Create a group</string>

    <string name="introduction">Introducing Grok 2</string>
    <string name="short_desc">Our newest AI assistant, powered by X</string>\
    <string name="btn_text">Subscribe Now</string>

    <string name="grok">Grok</string>

    <!--  Get creative part  -->

    <string name="get_creative">Get Creative</string>
    <string name="get_creative_text">Generate stunning visuals with our new image generation capabilities.</string>
    <string name="creative_prompt">Make a cyberpunk picture</string>

    <!--  Stay informed part  -->

    <string name="stay_informed">Stay Informed</string>
    <string name="stay_informed_text">Get up-to-date info on the latest news and trending topics, exclusively from X.</string>
    <string name="inform_prompt">What is the latest Cybertruck news?</string>

    <!--  Ask Anything part  -->

    <string name="ask_anything">Ask Anything</string>
    <string name="ask_anything_description">Grok can help with everyday tasks like writing emails, answering questions, and providing recipes.</string>
    <string name="ask_prompt">Help me write an email</string>

    <string name="ask_response">
        Sure! I\'d be happy to help! Could you provide a bit more detail about the email? For example:\n\n
        \t1. Who is the recipient?\n\n
        \t2. What is the purpose of the email?\n\n
        \t3. Any specific points or information you want to include?\n\n
        Feel free to share any details that will help me craft the email for you.
    </string>

    <string name="inform_response">
        Here are some of the latest updates on the Tesla Cybertruck:\n
        1. Production Update: Tesla is currently producing about 1,300 Cybertrucks
        per week and aims to increase this to 2,500 per week by the end of the year1.
        This ramp-up is part of their plan to reach an annual production capacity of
        250,000 units next year1.
    </string>

    <string name="name1">Cybertruck</string>
    <string name="username1">\@cybertruck</string>
    <string name="date1">Aug 1</string>
    <string name="caption1">Paint job by Mother Nature</string>

    <string name="name2">Elon Musk</string>
    <string name="username2">\@elonmusk</string>
    <string name="date2">Dec 1</string>
    <string name="caption2">Cybertruck production line</string>

    <string name="name3">Sawyer Merritt</string>
    <string name="username3">\@SawyerMerritt</string>
    <string name="date3">May 8</string>
    <string name="caption3">Someone wrapped their Cybertruck in a rust wrap. Thoughts?</string>

    <string name="image_description">To Avoid Warning</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--  Name and username profile  -->
    <string name="nav_name">Marcus Spartus</string>
    <string name="nav_username">\@marcusspartus</string>

    <string name="following_number">130</string>
    <string name="followers_number">211</string>

    <!--  Navigation bar designer  -->
    <string name="nav_profile">Profile</string>
    <string name="nav_premium">Premium</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_lists">Lists</string>
    <string name="nav_spaces">Spaces</string>
    <string name="nav_monetization">Monetization</string>

    <string name="openDrawer">Drawer Opened</string>
    <string name="closeDrawer">Drawer Closed</string>

    <string name="mentions_none_head">Join the conversation</string>
    <string name="mentions_none_body">When someone on X mentions you in a post or reply, you\'ll find it here.</string>

    <string name="verified_none_head">Nothing to see here - yet</string>
    <string name="verified_none_body">
        Likes, mentions, reposts, and a whole lot more - when it comes from a verified account, you\'ll find it here. \n\n

        Not verified? Subscribe now to get a verified account and join other people in quality conversations.
    </string>
    <string name="subscribe_button_text">Subscribe</string>

    <string name="notification_head_1">Mickey liked your post</string>
    <string name="notification_body_1">Water</string>

    <string name="notification_head_2">Daisy followed you</string>

</resources>