<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="20dp">

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/account_icon" />

    <LinearLayout
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/nav_name_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nav_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_name"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="start"
            android:textFontWeight="600"/>

        <TextView
            android:id="@+id/nav_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_username"
            android:textSize="18sp"
            android:textColor="#474646"
            android:layout_gravity="start"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fame_checker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/following_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following_number"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginEnd="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="18sp"
            android:textColor="#474646"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/followers_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers_number"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textSize="18sp"
            android:textColor="#474646"
            android:layout_marginStart="3dp"/>

    </LinearLayout>

</LinearLayout>